# magsteer

./: README.md
Hardware/InsertionToolCAD/: Body1.sldprt  Body2.sldprt  Body3.sldprt  Casing.SLDPRT  CasingAssembly.SLDASM  ForceSensorAttachmentPlate.SLDPRT  FullAssembly.SLDASM  SmarAct Slide Assembly.SLDASM  SmarActSlideMount.SLDPRT  SmarActSlideMountv2.SLDPRT  Thumbs.db  tubeHolder.SLDPRT  wireHolder.SLDPRT  wireHolderv2.SLDPRT
Hardware/InsertionToolCAD/Mounting/: Nano17print.SLDPRT  Nano17print.STL  NanoMountPlate.SLDPRT  NanoMountPlate.STL  NanoMountPlatev2.SLDPRT  NanoMountPlatev2.STL  Thumbs.db  XYZ_stage_adapter.SLDPRT
Hardware/InsertionToolCAD/NMSmarAct/: Führung_1770_nm.sldasm  SLC-1770-S-NM.SLDASM  SLC-1770-S-NM.STEP  SLC-1770-S-NM.sldprt  Schiene_1770.sldprt  Schlitten_1770.sldprt
Hardware/InsertionToolCAD/PolyimideSlicer/: Assem1.SLDASM  Base.SLDPRT  Base.STL  slider.SLDPRT  slider.STL  slider_1-28-19_GreyPro.form
Hardware/InsertionToolCAD/non3DprintedParts/: 1.27mmWire.SLDPRT  BrassInsert.SLDPRT  M1-6x5_91430A005_METRIC FLAT HEAD SLOTTED MACHINE SCREW.SLDPRT  M2x5_91430A052_METRIC FLAT HEAD SLOTTED MACHINE SCREW.SLDPRT  MiddleTube.SLDPRT  NDI_fiducial.SLDPRT  Nano17.SLDPRT  OuterTube.SLDPRT  mountArm.SLDPRT  stage_M-MT-XYZ.sldprt
Hardware/InsertionToolCAD/stls/: Body1.STL  Body2.STL  Body3.STL  ForceSenseAttach_GreyPro_1-4-19.form  ForceSenseAttach_GreyPro_1-4-19v2.form  ForceSenseAttach_GreyPro_1-7-19.form  ForceSensorAttachmentPlate.STL  GreyPro_1-10-19.form  ITAccessories_GreyPro_1-12-19.form  ITAccessories_GreyPro_1-14-19.form  ITAccessoryPrint_GreyPro_1-17-19.form  ITHousing_GreyPro_1-10-19.form  ITHousing_GreyPro_1-14-19.form  ITv4Print_GreyPro-_12-11-18.form  LaserCutAttach_Iterations.form  ScrewCutoffHolder.STL  ScrewCutoffHolderv2.STL  ScrewCutoffHolderv3.STL  SmarActSlideMount.STL  SmarActSlideMountv2.STL  Thumbs.db  TubeHoldTest_GreyPro_1-8-19.form  insert.form  testPiece.STL  tubeHolder.STL  wireHolder.STL  wireHolderv2.STL
Hardware/OmniMountCAD/: 8020Fastener.SLDPRT  8020_1ft.SLDPRT  8020_6inCorner.SLDPRT  8020_cap.SLDPRT  BoundingSphere.SLDPRT  BoundingSphere.STL  EndEffector.SLDPRT  Mount_halfInch.SLDPRT  OmniTopPlate.SLDPRT  Thumbs.db  ballbearing.SLDPRT  centerPiece.SLDPRT  flathead.SLDPRT  heightAdjustArm.SLDPRT  omniRigBody.SLDPRT  omnimagnet.SLDPRT  pole.SLDPRT  poleMount.SLDPRT  rigidarm.SLDPRT  rod.SLDPRT  tableMount.SLDPRT
Hardware/PhantomCAD/: COCHLEOSTOMY_PHANTOM_VERTICAL.SLDPRT  COCHLEOSTOMY_PHANTOM_VERTICAL_THIN.SLDPRT  ROUND_WINDOW_PHANTOM_VERTICAL.SLDPRT  ROUND_WINDOW_PHANTOM_VERTICAL_THIN.SLDPRT  ST_PHANTOM_AVERAGED_HEIGHT_COCHLEOSTOMY_MEDEL.SLDPRT  ST_PHANTOM_AVERAGED_HEIGHT_ROUND_WINDOW_ATTURO.SLDPRT  Thumbs.db
Software/imageguidance/: AIT_06-29-2017.rom
Software/ros_source_code/ati_ft_sensor/: CMakeLists.txt  package.xml
Software/ros_source_code/ati_ft_sensor/cal_files/: CalibrationMatrix_FT14887.cal  CalibrationMatrix_FT25874.cal  CalibrationMatrix_FT25874_orig.cal  CalibrationMatrix_FT4456.cal  CalibrationMatrix_FT4456_orig.cal  CalibrationMatrix_FT8669.cal
Software/ros_source_code/ati_ft_sensor/include/: ForceSensor.h  read_ft_sensor.h  test_ft_sensor.h
Software/ros_source_code/ati_ft_sensor/src/: ForceSensor.cpp  read_ft_sensor.cpp  test_ft_sensor.cpp
Software/ros_source_code/ati_ft_sensor/srv/: setZeroFT.srv
Software/ros_source_code/magsteering_test/: CMakeLists.txt  package.xml
Software/ros_source_code/magsteering_test/include/: controller.h
Software/ros_source_code/magsteering_test/src/: controller.cpp
Software/ros_source_code/omnimag/: CMakeLists.txt  package.xml
Software/ros_source_code/omnimag/msg/: mag_data.msg
Software/ros_source_code/omnimag/src/: omnimag_control.cpp  test_omnimag.cpp
Software/ros_source_code/smaract/: CMakeLists.txt  package.xml
Software/ros_source_code/smaract/include/: ActsAsynch.h  MCSControl.h
Software/ros_source_code/smaract/msg/: act_data.msg
Software/ros_source_code/smaract/src/: ActsAsynch.cpp  smaract_control.cpp  test_smaract.cpp
Software/ros_source_code/smaract/srv/: moveAbsolute.srv  moveRelative.srv  movetoLimit.srv  setZeroActs.srv
Software/smaracts/SmarActFilesFromRep_1-27-19/: MCS_3.0.11_Linux.tgz
Software/smaracts/SmarActFilesFromRep_1-27-19/DocsfromRep/MCS/: Thumbs.db
Software/smaracts/SmarActFilesFromRep_1-27-19/DocsfromRep/SmarPod/: Thumbs.db
Software/smaracts/SmarActFilesFromRep_1-27-19/MCSControl32&64bit_Libs/libmcscontrol/: Readme-Linux.txt  install_mcs.sh
Software/smaracts/SmarActFilesFromRep_1-27-19/firmware/Release_2018_11_20/: MCS Firmware Changes.txt  dmsc0v_1_5.fw6  dmsc_0_5.fw6  dmsg0v_1_5.fw6  dmsg_0_5.fw6  em_0_255.fw6  hcm_0_2.fw6  hcm_4_2.fw6  imet_0_2.fw6  (+4 more)
Software/smaracts/SmaractAsynchClass/: ActsAsynch.cpp  ActsAsynch.h  SmaractEtherTest_Class.pro  main.cpp
(+12 files in other folders)
