<?xml version="1.0"?>
<package>
  <name>magsteering_test</name>
  <version>1.0.0</version>
  <description>Test package for interfacing with magnetic steering nodes.</description>
  <maintainer email="katy.riojas@vanderbilt.edu">Katy</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>smaract</build_depend>
  <build_depend>ati_ft_sensor</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_runtime</build_depend>  
  <build_depend>message_generation</build_depend>  
  <run_depend>smaract</run_depend>
  <run_depend>ati_ft_sensor</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
